[package]
name = "raze-rs"
version = "0.1.0"
authors = ["Raphael Ahrens <raphaelahrens@googlemail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
#libusb = "0.3"
rusb = "0.9"
serde = { version = "1.0" , features = ["derive"]} 
eyre = "0.6"
clap = { version = "4.5", features = ["derive"] }

[lib]
name = "razer_rs"
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true
[[bin]]
name = "razer_light"
path = "src/main.rs"
